--- a/main.bib
+++ b/main.bib
@@ -234,3 +234,9 @@
   year = "1978"
 }
 
+@book{higher-topos-theory,
+  title={Higher topos theory},
+  author={Lurie, Jacob},
+  year={2009},
+  publisher={Princeton University Press}
+}
