--- a/main.bib
+++ b/main.bib
@@ -240,3 +240,28 @@
   year={2009},
   publisher={Princeton University Press}
 }
+
+@book{hovey-model-categories,
+  title={Model categories},
+  author={Hovey, Mark},
+  number={63},
+  year={2007},
+  publisher={American Mathematical Soc.}
+}
+
+@inproceedings{biequivalence-lcc-cwf,
+  title={The biequivalence of locally cartesian closed categories and Martin-L{\"o}f type theories},
+  author={Clairambault, Pierre and Dybjer, Peter},
+  booktitle={International Conference on Typed Lambda Calculi and Applications},
+  pages={91--106},
+  year={2011},
+  organization={Springer}
+}
+
+@article{au-as-list-arithmetic-pretopos,
+  title={Joyal's arithmetic universe as list-arithmetic pretopos.},
+  author={Maietti, Maria Emilia},
+  journal={Theory \& Applications of Categories},
+  volume={24},
+  year={2010}
+}
