Add todo about acknowledgements

--- a/main.tex
+++ b/main.tex
@@ -1365,6 +1365,9 @@ A further direction for future reasearch could be an adaptation of our technique
 The main difficulty here is that presentations of a quasi-category in terms of a 1-category are often quite hard to work with if the quasi-category is not cocomplete and hence model category theory is not directly applicable.
 While the intended quasi-categories are not always cocomplete, using our technique we can still work with a very well-behaved combinatorial model category by considering all such quasi-categories at once.
 
+\textbf{Acknowledgements} \todo{todo}
+
+
 \bibliographystyle{alpha}
 
 \bibliography{main}
