Remove space hint in author name
Appears to have no effect anyway.

--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@
 
 \title{A model of dependent type theory in the category of locally cartesian closed categories}
 
-\author{Martin E.\@ Bidlingmaier}
+\author{Martin E. Bidlingmaier}
 
 \maketitle
 
